#28792 Fix 'text overflow' styling: -rename css class for 'next session' widget to prevent conflicts with other styles (which related to the same widget). -decrease height of title area for 'mark roll' widget: show only two lines of text
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@44328 fb2e276d-fae9-0310-b578-b71ac85840b9

--- a/portal/src/main/static/src/_dashboard.scss
+++ b/portal/src/main/static/src/_dashboard.scss
@@ -435,7 +435,7 @@
   	overflow: hidden;
     text-overflow: ellipsis;
     
-    &.next-session {
+    &.next-session-title {
 		-webkit-line-clamp: 4;
 		height: 110px;
     }
@@ -454,8 +454,8 @@
     }
     
     &.mark-roll, &.mark-outcomes {
-		-webkit-line-clamp: 3;
-		height: 70px;
+		-webkit-line-clamp: 2;
+		height: 50px;
     }
     
     &.application {
